# AdventOfCode2022

./: .gitignore  README.md
.docs/: DOCUMENTATION.md
Day01/: .clang-format  CMakeLists.txt  main.cpp
Day01/docs/Doxygen/: Orig__Catch_8hpp__dep__incl.map  Orig__Catch_8hpp__incl.map  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  navtreedata.js  navtreeindex0.js  test__lib_8cpp__incl.map
Day01/lib/: util.h
Day01/misc/cmake/: nativePckg.cmake
Day01/test/: Orig_Catch.hpp  test_lib.cpp
Day02/: BUILD  CMakeLists.txt  conanfile.txt  main.cpp
Day02/docs/Doxygen/: Orig__Catch_8hpp__incl.md5  lib_8h.html  lib_8h_source.html  test__lib_8cpp.html  test__lib_8cpp__incl.md5  util_8h_source.html
Day02/docs/Doxygen/search/: all_0.js  all_2.js  searchdata.js
Day02/misc/: listSubmodules.sh
Day02/misc/Doxygen/: doxyfile.conf
Day03/: .clang-tidy  CMakeLists.txt  Makefile  README.md  main.cpp  meson.build
Day03/docs/Doxygen/: Orig__Catch_8hpp.html  Orig__Catch_8hpp__dep__incl.md5  Orig__Catch_8hpp_source.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  graph_legend.html  index.html
Day03/misc/: static_check.sh
Day03/misc/cmake/: depPckg.cmake
